# official-misconcept-lm-plan-gen

./: README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  globals.yml  parameters_further_ppo_training.yml  parameters_language_model_planning_evaluation.yml  parameters_plan_validation_probing.yml  parameters_text_prompt_generation.yml  parameters_training_llm_for_plan_generation.yml
conf/local/: credentials.yml
data/: READMD.md
data/03_primary/llm_plan_generation_dataset_qwen/: README.md  cp_part.py  debug.py
opt/: READMD.md
src/better_language_model_for_plan_generation/: __init__.py  __main__.py
src/better_language_model_for_plan_generation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/better_language_model_for_plan_generation/utils/: README.md  action_hint.py  call_planning_as_service.py  constant.py  custom_compute_metrics.py  custom_reward_model_ppo_trainer.py  custom_reward_model_rloo_trainer.py  eval_generated_plan_text.py  rectify_back_token_punc.py  visualize_tokens.py
zjob-scripts/: README.md  step_1_huggingface_dataset_creation.sh  step_2_training_llm_for_plan_gen.sh  step_3_llama_fac_lm_planning_evaluation.sh  step_3_llama_fac_lm_planning_evaluation_clever_hans.sh  step_3_llama_fac_lm_planning_evaluation_ppo.sh  step_4_lm_planning_probing.sh  step_5_ppo_further_training.sh
zjob-scripts/llama_fac_config/data/: dataset_info.json
zjob-scripts/llama_fac_config/deepspeed/: deepspeed_zero2.yaml  llama3_full_sft_ds3_accu_t1.yaml  llama3_full_sft_ds3_accu_t1_t3.yaml  (+8 more)
(+32408 files in other folders)
